--- a/_posts/2017-08-12-pure_aosp.md
+++ b/_posts/2017-08-12-pure_aosp.md
@@ -2,7 +2,7 @@
 type: ROM
 title: Pure AOSP 7.1.2 For Redmi Note 3 
 date: 2017-08-12
-category: ROM
+category: Pure AOSP
 photos:
 - /images/pure_aosp/1.png
 - /images/pure_aosp/2.png
