--- a/_posts/2017-08-12-pure_aosp.md
+++ b/_posts/2017-08-12-pure_aosp.md
@@ -11,9 +11,19 @@ tags:
 - Pure AOSP
 description: 
 ---
+
+<!-- more -->
+
 - ROMer: DoveKi
 - Android Version: 7.1.2_r33
 - Build Date: 2017-08-12
-- Download: https://www.androidfilehost.com/?fid=961840155545588191
+- Download: <https://www.androidfilehost.com/?fid=961840155545588191>
 - MD5: ff3d47e3a4c19ca50a069e808b3ecad5
 
+- Consider donating if you like my work -(如果你喜欢我的ROM，请捐赠支持我)
+- PayPal: <https://www.paypal.me/doveki>
+- Alipay(支付宝)
+![Alipay](http://t1.qpic.cn/mblogpic/7eb14f08cc0da6efbd04/2000)
+-
+- Wechat(微信支付)
+![Wechat](http://t1.qpic.cn/mblogpic/ec874f38c3cd5aa6f78c/2000)
