--- a/_posts/2017-08-12-pure_aosp.md
+++ b/_posts/2017-08-12-pure_aosp.md
@@ -1,4 +1,4 @@
----
+	---
 title: Pure AOSP 7.1.2 For Redmi Note 3
 photos:
 - /images/pure_aosp/1.png
@@ -8,7 +8,7 @@ photos:
 
 <!-- more -->
 
-- <b>Maintainter:</b> DoveKi
+- <b>Author:</b> DoveKi
 - <b>Android Version:</b> 7.1.2_r33
 - <b>Build Date:</b> 2017-08-12
 - <b>Download:</b> <https://www.androidfilehost.com/?fid=961840155545588191>
