--- a/_posts/2017-08-12-pure_aosp.md
+++ b/_posts/2017-08-12-pure_aosp.md
@@ -15,5 +15,5 @@ photos:
 - <b>MD5:</b> ff3d47e3a4c19ca50a069e808b3ecad5
 
 ----------------------------------------------------------
-- <b>Consider donating if you like my work</b>
+- <b>If you like my work,you can buy me a beer</b>
 - <b>PayPal:</b> <https://www.paypal.me/doveki>
